# FastAPI-GraphQL-MongoDB-Proto

./: README.md  app.py  consumer.py  db.py  docker-compose.yaml  main.py  mutation.py  producer.py  pyproject.toml  query.py  requirements.txt
grpc/: grpc_app.py
grpc/client/: app.py
proto_compiled/: product_pb2.py  product_pb2_grpc.py  user_pb2.py  user_pb2_grpc.py
protos/: product.proto  user.proto
