[project]
name = "fastapi-graphql-mongodb-proto"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "confluent-kafka>=2.14.0",
    "fastapi>=0.136.1",
    "grpcio-tools>=1.80.0",
    "protobuf>=6.33.6",
    "pymongo>=4.17.0",
    "strawberry-graphql>=0.316.0",
    "uvicorn>=0.47.0",
]
